Introduced pagination models into Services component, improved infinite loading of services by tidying up the UI for the container and container parent of services list, refactored the code to meet new chnges, etc.

--- a/promo-codes-react-spa/src/App.css
+++ b/promo-codes-react-spa/src/App.css
@@ -25,9 +25,13 @@
   width: 30em;
 }
 
-#services-scroll-container {
-  height: 40em;
+#services-scroll-container-parent {
+  height: 100vh;
   overflow-y: auto;
+}
+
+#services-scroll-container {
+  min-height: 100%;
 }
 
 #services-loading-idicator {
